# ptz-tracking-dock

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-release.yml
packaging/macos/: build-pkg.sh
packaging/macos/scripts/: postinstall
packaging/windows/: build-installer.ps1  ptz-tracking-dock.iss
src/: ptz_config.cpp
